DS3 landing page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="banner">
             <div class="overlay">
                 <div class="logo">
-                    <img src="images/logo.svg" alt="Design Summit 2022">
+                    <img src="images/logo.svg" alt="Design Summit 2023">
                 </div>
             </div>
         </div>
@@ -21,10 +21,10 @@
         <div class="intro-wrapper">
             <h1 class="page-title">
                 We are pleased to invite you to the <br>
-                Harbinger Design Summit 2022.
+                Harbinger Design Summit 2023.
             </h1>
             <h2 class="intro-text">
-                The Design Summit offers an opportunity to learn, exchange thoughts &amp; ideas, find quick solutions and understand the value of design in business.
+                5 days of inspiration, education and skills development for user experience designers, UX leaders, visual designers, user researchers, front end designers and managers.
             </h2>
         </div>
         <!-- /Introduction -->
@@ -37,10 +37,10 @@
                 <div class="container flex-wrapper">
                     <div class="events">Keynote Speaker<br> Sessions</div>
                     <div class="events">UX<br> Workshop</div>
-                    <div class="events">Creative<br> Solutions</div>
-                    <div class="events">Designathon</div>                    
                     <div class="events">Breakout<br> Sessions</div>
-                    <div class="events">Creative<br> Nap</div>
+                    <div class="events">Designathon</div>                    
+                    <div class="events">Panel<br> Discussion</div>
+                    <div class="events">Design<br> Activity</div>
                 </div>
             </div>
         </div>
@@ -61,9 +61,9 @@
                                 <h3 class="event-title">Opening Ceremony</h3>
                                 <div class="event-time">10:00 am – 10:30 am </div>
                                 <p class="event-desc">
-                                    This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
+                                    Design Summit offers a platform for collaboration, inspiration, and learning, featuring thought-provoking keynotes, interactive workshops, and breakout sessions covering a wide range of design disciplines.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -73,7 +73,7 @@
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -81,9 +81,9 @@
                                 <h3 class="event-title">Panel Discussion</h3>
                                 <div class="event-time">11:30 am – 12:30 pm </div>
                                 <p class="event-desc">
-                                    This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
+                                    The panel discussion at the Design Summit brings together experts and thought leaders in the field of design for an engaging and insightful conversation. Addressing key topics and trends, the panelists share their perspectives, experiences, and expertise, providing diverse viewpoints on the challenges and opportunities in the design industry.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                     </div>
@@ -100,9 +100,9 @@
                                 <h3 class="event-title">UX Workshop</h3>
                                 <div class="event-time">10:00 am – 01:00 pm </div>
                                 <p class="event-desc">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    The UX workshop is a hands-on session where participants will learn practical techniques and methodologies to enhance user experience design. 
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                     </div>
@@ -116,12 +116,12 @@
                     <div class="v-col-wrapper">
                         <div class="v-col">
                             <div class="schedule">
-                                <h3 class="event-title">Key Note 3 - External Speaker</h3>
+                                <h3 class="event-title">Key Note 2 - External Speaker</h3>
                                 <div class="event-time">10:00 am – 10:45 am </div>
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -129,9 +129,9 @@
                                 <h3 class="event-title">Designathon</h3>
                                 <div class="event-time">11:00 am – 12:30 pm </div>
                                 <p class="event-desc">
-                                    This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
+                                    The Designathon is a fast-paced, collaborative event that pushed the boundaries of creativity and problem-solving. Participants will come together to tackle real-world challenges and devise innovative solutions
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -139,9 +139,9 @@
                                 <h3 class="event-title">In-office Design Activity</h3>
                                 <div class="event-time">12:30 pm – 01:00 pm </div>
                                 <p class="event-desc">
-                                    This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
+                                    Unleash your design flair and join us for a hands-on design activity. Discover the joy of combining elements in unexpected ways and leave with your own personalized masterpiece.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>                        
                     </div>
@@ -155,12 +155,12 @@
                     <div class="v-col-wrapper">
                         <div class="v-col">
                             <div class="schedule">
-                                <h3 class="event-title">Key Note 2 - Smita Kanakula</h3>
+                                <h3 class="event-title">Key Note 3 - Smita Kanakula</h3>
                                 <div class="event-time">10:00 am – 10:45 am </div>
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -170,7 +170,7 @@
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -180,7 +180,7 @@
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>                        
                     </div>
@@ -191,15 +191,15 @@
                         <span class="date">28</span>
                         <span class="wday">Friday<span>July</span></span>
                     </div>
-                    <div class="v-col-wrapper flex-wrap">
+                    <div class="v-col-wrapper flex-wrap mb-0 border-0">
                         <div class="v-col">
                             <div class="schedule">
                                 <h3 class="event-title">Fun & learning activities</h3>
                                 <div class="event-time">10:00 am – 10:45 am </div>
                                 <p class="event-desc">
-                                    This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
+                                    Explore the realms of imagination and creativity by participating in a fun & learning activities.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -209,7 +209,7 @@
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col">
@@ -217,13 +217,13 @@
                                 <h3 class="event-title">Closing Ceremony</h3>
                                 <div class="event-time">11:45 am – 12:00 pm </div>
                                 <p class="event-desc">
-                                    This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
+                                    Hear our management about Design Summit followed by felicitations and closing remarks!
                                 </p>
-                                <a href="https://harbingergroup.zoom.us/j/91317634835?pwd=bkNQbmU3UWVGaldpcGFFRHh3NURyQT09" class="btn btn-primary">Join Event</a>
+                                <a href="#" class="btn btn-primary">Join Event</a>
                             </div>
                         </div>
                         <div class="v-col f-auto">
-                            <div class="schedule">
+                            <div class="schedule mb-0">
                                 <h3 class="event-title">Snacks for all</h3>
                                 <div class="event-time">12:00 pm – 12:30 pm </div>
                                 <p class="event-desc">
@@ -239,7 +239,7 @@
         <footer>
             <h4 class="f-line">Participate in the Events and enjoy Learning!!</h4>
             <div class="f-logo">
-                <img src="images/logo.svg" alt="Design Summit 2022">
+                <img src="images/logo.svg" alt="Design Summit 2023">
             </div>
         </footer>
     </div>
