--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="d-flex">
                     <div class="date-wrapper">
                         <span class="day">Day 1</span>
-                        <span class="date">24</span>
-                        <span class="wday">Monday<span>July</span></span>
+                        <span class="date">09</span>
+                        <span class="wday">Monday<span>October</span></span>
                     </div>
                     <div class="v-col-wrapper">
                         <div class="v-col">
@@ -91,8 +91,8 @@
                 <div class="d-flex">
                     <div class="date-wrapper">
                         <span class="day">Day 2</span>
-                        <span class="date">25</span>
-                        <span class="wday">Tuesday<span>July</span></span>
+                        <span class="date">10</span>
+                        <span class="wday">Tuesday<span>October</span></span>
                     </div>
                     <div class="v-col-wrapper">
                         <div class="v-col">
@@ -110,8 +110,8 @@
                 <div class="d-flex">
                     <div class="date-wrapper">
                         <span class="day">Day 3</span>
-                        <span class="date">26</span>
-                        <span class="wday">Wednesday<span>July</span></span>
+                        <span class="date">11</span>
+                        <span class="wday">Wednesday<span>October</span></span>
                     </div>
                     <div class="v-col-wrapper">
                         <div class="v-col">
@@ -149,8 +149,8 @@
                 <div class="d-flex">
                     <div class="date-wrapper">
                         <span class="day">Day 4</span>
-                        <span class="date">27</span>
-                        <span class="wday">Thursday<span>July</span></span>
+                        <span class="date">12</span>
+                        <span class="wday">Thursday<span>October</span></span>
                     </div>
                     <div class="v-col-wrapper">
                         <div class="v-col">
@@ -166,7 +166,7 @@
                         <div class="v-col">
                             <div class="schedule">
                                 <h3 class="event-title">Breakout sessions</h3>
-                                <div class="event-time">11:00 am – 11:30 am </div>
+                                <div class="event-time">11:00 am – 11:45 am </div>
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
@@ -176,7 +176,7 @@
                         <div class="v-col">
                             <div class="schedule">
                                 <h3 class="event-title">Breakout sessions</h3>
-                                <div class="event-time">11:35 am – 12:15 pm </div>
+                                <div class="event-time">12:00 pm – 12:45 pm </div>
                                 <p class="event-desc">
                                     This marks the beginning of the Design Summit. Welcome to the participants and overview of the activities that will be sessioned in the week.
                                 </p>
@@ -188,8 +188,8 @@
                 <div class="d-flex">
                     <div class="date-wrapper">
                         <span class="day">Day 5</span>
-                        <span class="date">28</span>
-                        <span class="wday">Friday<span>July</span></span>
+                        <span class="date">13</span>
+                        <span class="wday">Friday<span>October</span></span>
                     </div>
                     <div class="v-col-wrapper flex-wrap mb-0 border-0">
                         <div class="v-col">
