breakout session content updated- index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <h3 class="event-title">Breakout session - UI Design</h3>
                                 <div class="event-time">10:00 am – 10:45 am </div>
                                 <p class="event-desc">
-                                    Leverage the power of AI to generate a versatile web applications for your business!
+                                    Artificial intelligence (AI) has become increasingly valuable for UI/UX designers. AI tools can help streamline the design process, improve user experiences, and optimize designs for better results. Explore some AI tools and applications that can benefit UI/UX designers as well as who love to design.
                                 </p>
                                 <a href="https://harbingergroup.zoom.us/j/95390216317?pwd=dFZyOE1KZjhIcDl6N1R4Z2NpZDVsZz09" class="btn btn-primary">Join Event</a>
                             </div>
